--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,4 +81,9 @@ dependencies {
     // --------------- eventBus ----------
     implementation "org.greenrobot:eventbus:3.2.0"
 
+    
+    //glide
+    implementation 'com.github.bumptech.glide:glide:4.13.2'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.13.2'
+
 }
