--- a/settings.gradle
+++ b/settings.gradle
@@ -13,6 +13,7 @@ dependencyResolutionManagement {
         mavenCentral()
         maven { url 'https://jitpack.io' }
         maven { url "https://s01.oss.sonatype.org/content/groups/public" }
+        jcenter()
     }
 }
 rootProject.name = "nuanxin-kotlin"
