--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,7 +65,7 @@ dependencies {
     def okhttp_version = "4.8.1"
     implementation "com.squareup.okhttp3:okhttp:$okhttp_version"
 
-    // Coroutine
+    // Coroutine 协程
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0'
 
@@ -85,5 +85,7 @@ dependencies {
     //glide
     implementation 'com.github.bumptech.glide:glide:4.13.2'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.2'
+
+    implementation "com.wang.avi:library:2.1.3"
 
 }
